--- a/views/signup.html
+++ b/views/signup.html
@@ -43,7 +43,7 @@
     }
 
     button:hover {
-      background-color: #45a049;
+      background-color: #006f3e;
     }
   </style>
   <script>      
