--- a/public/stylesheets/index_style.css
+++ b/public/stylesheets/index_style.css
@@ -200,7 +200,7 @@
 #sidebar-wrapper {
   position: fixed;
   width: 250px;
-  height: 100%;
+  height: 1000px;
   margin-left: -250px;
   background: #006f3e;
   overflow-x: hidden;
@@ -210,6 +210,11 @@
 #page-content-wrapper {
   width: 100%;
   padding: 20px;
+}
+
+/* 매치 글자 위 여백 */
+.sidebar-brand {
+  margin-top: 50px; /* 변경할 여백 크기 */
 }
 /* 사이드바 스타일 */
 
@@ -260,4 +265,14 @@
   font-size: 15px;
   font-weight: bold;
   color: aliceblue;
+}
+/*매치글 페이지네이션 버튼 색*/
+.btn-custom {
+  background-color: #006f3e;
+  color: white; /* 버튼 텍스트 색상을 변경하려면 추가 */
+}
+
+.btn-custom.active,
+.btn-custom:hover {
+  background-color: #00552e; /* 활성화 또는 호버 시 색상 변경 */
 }
