--- a/views/match.html
+++ b/views/match.html
@@ -80,12 +80,18 @@
       </div>
       </div>
   
-    
+    <!-- 페이지네이션 -->
+    <div class="pagination justify-content-center mt-4" id="pagination">
+      <!-- 여기에 페이지 버튼들이 추가  -->
+    </div>
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script>// HTML 템플릿에 데이터 추가
     const tbody = document.querySelector('tbody');
+    const paginationDiv = document.getElementById('pagination');
+
+    //매치 리스트 가져오기
     fetch('/match/list')
         .then(response => response.json())
         .then(data => {
@@ -105,6 +111,81 @@
           });
         })
         .catch(error => console.error('Error:', error));
+
+
+    //페이지네이션
+    const ITEMS_PER_PAGE = 10;
+
+    function createPaginationButtons(totalPages, currentPage) {
+  paginationDiv.innerHTML = ''; // 이전 버튼 초기화
+
+  const prevButton = document.createElement('button');
+  prevButton.innerHTML = `
+    <span aria-hidden="true">&laquo;</span>
+    <span class="visually-hidden">Previous</span>
+  `;
+  prevButton.classList.add('btn', 'btn-outline-secondary', 'me-2');
+  prevButton.addEventListener('click', () => {
+    if (currentPage > 1) {
+      fetchData(currentPage - 1);
+    }
+  });
+  paginationDiv.appendChild(prevButton);
+
+  for (let i = 1; i <= totalPages; i++) {
+    const pageButton = document.createElement('button');
+    pageButton.innerText = i;
+    pageButton.classList.add('btn', 'btn-outline-secondary', 'me-2');
+    if (i === currentPage) {
+      pageButton.classList.add('btn-custom');
+    }
+    pageButton.addEventListener('click', () => {
+      fetchData(i);
+    });
+    paginationDiv.appendChild(pageButton);
+  }
+
+  const nextButton = document.createElement('button');
+  nextButton.innerHTML = `
+    <span aria-hidden="true">&raquo;</span>
+    <span class="visually-hidden">Next</span>
+  `;
+  nextButton.classList.add('btn', 'btn-outline-secondary');
+  nextButton.addEventListener('click', () => {
+    if (currentPage < totalPages) {
+      fetchData(currentPage + 1);
+    }
+  });
+  paginationDiv.appendChild(nextButton);
+}
+
+function fetchData(page) {
+  fetch(`/match/list?page=${page}`)
+    .then(response => response.json())
+    .then(data => {
+      tbody.innerHTML = ''; // 테이블 초기화
+
+      data.boards.forEach((matches, index) => {
+        const row = document.createElement('tr');
+        const formattedDate = new Date(matches.createdAt).toLocaleDateString();
+        row.innerHTML = `
+          <td>${index + 1}</td>
+          <td>${matches.state}</td>
+          <td>${matches.sport}</td>
+          <td>${matches.title}</td>
+          <td>${matches.writer}</td>
+          <td>${formattedDate}</td>
+        `;
+        tbody.appendChild(row);
+      });
+
+      createPaginationButtons(data.totalPages, data.currentPage);
+    })
+    .catch(error => console.error('Error:', error));
+}
+
+// 초기 데이터 로딩
+fetchData(1);
   </script>
   </body>
 </html>
