--- a/views/community.html
+++ b/views/community.html
@@ -38,7 +38,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/community" class="underline-on">커뮤니티</a>
+            <a href="/community" class="underline-on" style="font-size: 1.5em;">커뮤니티</a>
           </li>
 
           <li><a href="/community/popular">인기 게시판</a></li>
