--- a/views/contest.html
+++ b/views/contest.html
@@ -39,7 +39,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/info" class="underline-on">교내대회</a>
+            <a href="/info" class="underline-on" style="font-size: 1.5em;">교내대회</a>
           </li>
           <li><a href="/info/soccer">축구팀</a></li>
           <li><a href="/info/hockey">하키팀</a></li>
