--- a/views/faq.html
+++ b/views/faq.html
@@ -38,7 +38,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/help/notices" >도움말</a>
+            <a href="/help/notices" style="font-size: 1.5em;">도움말</a>
           </li>
           <li><a href="/help/notices">공지사항</a></li>
           <li><a href="/help/qna">QnA</a></li>
