--- a/views/hockey.html
+++ b/views/hockey.html
@@ -39,7 +39,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/info">교내대회</a>
+            <a href="/info" style="font-size: 1.5em;">교내대회</a>
           </li>
           <li><a href="/info/soccer">축구</a></li>
           <li><a href="/info/hockey" class="underline-on">하키</a></li>
