--- a/views/market_board.html
+++ b/views/market_board.html
@@ -39,7 +39,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/community" >커뮤니티</a>
+            <a href="/community" style="font-size: 1.5em;">커뮤니티</a>
           </li>
 
           <li><a href="/community/popular">인기 게시판</a></li>
