--- a/views/mypage.html
+++ b/views/mypage.html
@@ -47,7 +47,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/users" >마이페이지</a>
+            <a href="/users" style="font-size: 1.5em;">마이페이지</a>
             <br>
             <br>
             <br>
