--- a/views/popular_board.html
+++ b/views/popular_board.html
@@ -38,7 +38,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/community" >커뮤니티</a>
+            <a href="/community" style="font-size: 1.5em;">커뮤니티</a>
           </li>
 
           <li><a href="/community/popular" class="underline-on">인기 게시판</a></li>
