--- a/views/qna.html
+++ b/views/qna.html
@@ -39,7 +39,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/help/notices" >도움말</a>
+            <a href="/help/notices" style="font-size: 1.5em;">도움말</a>
           </li>
           <li><a href="/help/notices">공지사항</a></li>
           <li><a href="/help/qna" class="underline-on">QnA</a></li>
