--- a/views/stadium.html
+++ b/views/stadium.html
@@ -39,7 +39,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-brand">
-            <a href="/match">매치</a>
+            <a href="/match" style="font-size: 1.5em;">매치</a>
           </li>
           <li><a href="/match">전체 매치</a></li>
           <li><a href="/match/write">매치 게시물 작성</a></li>
